--- a/frontend/src/components/HomeSections/HomeSection2/HomeSection2.scss
+++ b/frontend/src/components/HomeSections/HomeSection2/HomeSection2.scss
@@ -53,11 +53,13 @@
 
       .home-section2-subtitle {
         @extend .paragraph3;
+        box-sizing: border-box;
         color: white;
         position: relative;
+        font-weight: 300;
         line-height: 70%;
         margin: 0;
-        padding: 0;
+        padding: 0 0 3% 0;
       }
 
       .btn {
